black and white borders to layout

--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,14 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+<!DOCTYPE/ html>
+<html>
+	<head>
+		<title>NewLayout</title>
+		<link rel="stylesheet" href="style.css">
+
+	</head>
+
+		<body>
+			<header class="theHeader"></header>
+			<div class="body"></div>
+			<footer class="footer"></footer>
+		</body>
+</html>
